Se agrega archivo normalize y se elimina la configuración tree para javascripts y stylesheets.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cyberclock</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <title>Cyberclock | <%= yield(:title) %></title>
+  <%= stylesheet_link_tag    'application', "#{params[:controller]}", media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', "#{params[:controller]}", 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
