--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cyberclock | <%= yield(:title) %></title>
+  <title><%= yield(:title) %> | Cyberclock</title>
   <%= stylesheet_link_tag    'application', "#{params[:controller]}", media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', "#{params[:controller]}", 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
