--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -14,11 +14,16 @@
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
+
   </div>
+
+  <%= f.hidden_field :company_id, value: params[:company_id] %>
+  <!--
   <div class="field">
-    <%= f.label :company_id %><br>
-    <%= f.number_field :company_id %>
+    <= f.label :company_id %><br>
+    <= f.number_field :company_id %>
   </div>
+  -->
   <div class="actions">
     <%= f.submit %>
   </div>
