--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title><%= yield(:title) %> | Cyberclock</title>
-  <%= stylesheet_link_tag    'application', "#{params[:controller]}", media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', "#{params[:controller]}", media: 'all' %>
+  <!--%= stylesheet_link_tag    'application', "#{params[:controller]}", media: 'all', 'data-turbolinks-track' => false %-->
   <%= yield :asset_stylesheet %>
   <%= csrf_meta_tags %>
 </head>
@@ -20,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Cyberclock</a>
+      <%= link_to 'Cyberclok', root_path, class: 'navbar-brand' %>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -30,6 +31,7 @@
         <li class="promotions-nav-bar"><%= link_to 'Promociones', promotions_path %></li>
         <li class="computers-nav-bar"><%= link_to 'Computadoras', computers_path %></li>
         <li class="rents-nav-bar"><%= link_to 'Rentas', rents_path %></li>
+        <li class="users-nav-bar"><%= link_to 'Usuarios', users_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
           <ul class="dropdown-menu">
@@ -49,7 +51,6 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="./">Default</a></li>
         <li><a href="#">Static top</a></li>
-        <li><a href="#">Fixed top</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
