--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 <div class="container">
 
   <!-- Static navbar -->
+  <% if current_user %>
   <div class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -32,28 +33,40 @@
         <li class="computers-nav-bar"><%= link_to 'Computadoras', computers_path %></li>
         <li class="rents-nav-bar"><%= link_to 'Rentas', rents_path %></li>
         <li class="users-nav-bar"><%= link_to 'Usuarios', users_path %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <!--
+        <li class="active"><a href="./">Default</a></li>
+        <li><a href="#">Static top</a></li>
+        -->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cog"></i> Opciones <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li class="companies-nav-bar"><%= link_to 'Empresas', companies_path %></li>
+            <li class="branches-nav-bar"><%= link_to 'Sucursales', branches_path %></li>
+            <li class="rules-nav-bar"><%= link_to 'Reglas', rules_path %></li>
+            <li class="promotions-nav-bar"><%= link_to 'Promociones', promotions_path %></li>
+            <li class="computers-nav-bar"><%= link_to 'Computadoras', computers_path %></li>
+            <li class="rents-nav-bar"><%= link_to 'Rentas', rents_path %></li>
+            <li class="users-nav-bar"><%= link_to 'Usuarios', users_path %></li>
             <li class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
-            <% if current_user_session %>
-                <li> <%= link_to "Logout", user_session_path, method: :delete %> </li>
-            <% end %>
+            <li class="dropdown-header">Cuenta</li>
+            <!--<li><a href="#">Separated link</a></li>-->
+            <li><%= link_to 'Editar usuario', edit_user_path(current_user) %></li>
+            <li><%= link_to 'Cerrar sesión', user_session_path, method: :delete %> </li>
           </ul>
         </li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="./">Default</a></li>
-        <li><a href="#">Static top</a></li>
-      </ul>
     </div><!--/.nav-collapse -->
   </div>
+  <% end %>
+
+  <% flash.each do |key, msg| %>
+      <div class="alert alert-<%= key %> alert-dismissable auto-remove">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <p><%= msg %></p>
+      </div>
+  <% end %>
 
   <%= yield %>
   <!-- Main component for a primary marketing message or call to action -->
