--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,33 +1,3 @@
-<!--
-<form class="form-horizontal" role="form">
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <div class="checkbox">
-        <label>
-          <input type="checkbox"> Remember me
-        </label>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Sign in</button>
-    </div>
-  </div>
-</form>
--->
 <%= form_for(@user, html: {class: 'form-horizontal', role: 'form'}) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
@@ -84,7 +54,7 @@
   <div class="form-group">
     <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Confiración de Contraseña' %>
+      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirmación de Contraseña' %>
     </div>
   </div>
 
