--- a/app/assets/stylesheets/companies.css.scss
+++ b/app/assets/stylesheets/companies.css.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Companies controller here.
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.company-container{
+  height: 270px;
+  overflow: auto;
+  .branch-item{
+    margin: 10px 15px;
+  }
+}
+
+#index-head{
+  overflow: hidden;
+  #title{
+    float: left;
+  }
+
+  #new_company{
+    float: right;
+  }
+}
