--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,28 +1,24 @@
 <%= provide(:title, 'Empresas') %>
-<h1>Listing companies</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<div id="index-head">
+  <h1 id="title">Empresas</h1>
+  <%= link_to '<i class="fa fa-plus"></i> Crear empresa'.html_safe, new_company_path, class: 'btn btn-success', id: 'new_company' %>
+</div>
 
-  <tbody>
-    <% @companies.each do |company| %>
-      <tr>
-        <td><%= company.name %></td>
-        <td><%= link_to 'Show', company %></td>
-        <td><%= link_to 'Edit', edit_company_path(company) %></td>
-        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Company', new_company_path %>
+<div class="row">
+  <% @companies.each do |company| %>
+      <div class="col-6 col-sm-6 col-lg-4 company-container">
+        <h2><i class="fa fa-bookmark"></i> <%= company.name %></h2>
+        <% company.branches.order(:created_at).each do |branch| %>
+            <div class="branch-item"><%= link_to "<i class='fa fa-building-o'></i> #{branch.name}".html_safe, branch %></div>
+        <% end %>
+        <div class="branch-item"><%= link_to "<i class='fa fa-plus'></i> Crear sucursal".html_safe, new_branch_path(:company_id => company.id) %></div>
+        <!--<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>-->
+        <p>
+          <%= link_to 'Ver detalles »', company, role: 'button', class: 'btn btn-default' %>
+          <%= link_to 'Editar »', edit_company_path(company), role: 'button', class: 'btn btn-info' %>
+          <%= link_to 'Eliminar »', company, method: :delete, data: { confirm: '¿Está seguro?' }, role: 'button', class: 'btn btn-danger btn-sm' %>
+        </p>
+      </div>
+  <% end %>
+</div>
