--- a/app/views/rules/_form.html.erb
+++ b/app/views/rules/_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+  <%= f.hidden_field :company_id, value: params[:company_id] %>
+
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
