--- a/app/views/branches/edit.html.erb
+++ b/app/views/branches/edit.html.erb
@@ -1,7 +1,7 @@
 <%= provide(:title, 'Editando sucursal') %>
-<h1>Editing branch</h1>
+<h1>Editando sucursal</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @branch %> |
-<%= link_to 'Back', branches_path %>
+<%= link_to 'Mostrar', @branch %> |
+<%= link_to 'Regresar', branches_path %>
