--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -8,6 +8,11 @@
   <%= @branch.name %>
 </p>
 
+<p>
+  <strong>Dirección:</strong>
+  <%= @branch.address %>
+</p>
+
 <!--
 <p>
   <strong>Company:</strong>
