--- a/app/assets/stylesheets/branches.css.scss
+++ b/app/assets/stylesheets/branches.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Branches controller here.
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#index-head{
+  overflow: hidden;
+  #title{
+    float: left;
+  }
+
+  #new_branch{
+    float: right;
+  }
+}
