--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@branch) do |f| %>
+<%= form_for(@branch, html: {class: 'form-horizontal', role: 'form'}) do |f| %>
   <% if @branch.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@branch.errors.count, "error") %> prohibited this branch from being saved:</h2>
@@ -11,22 +11,33 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-
+  <div class="form-group">
+    <%= f.label :name, 'Nombre', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
+    </div>
   </div>
 
   <% if params[:company_id] %>
     <%= f.hidden_field :company_id, value: params[:company_id] %>
   <% end %>
+
+  <div class="form-group">
+    <%= f.label :address, 'Dirección', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :address, class: 'form-control', placeholder: 'Dirección' %>
+    </div>
+  </div>
   <!--
   <div class="field">
     <= f.label :company_id %><br>
     <= f.number_field :company_id %>
   </div>
   -->
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit 'Guardar', class: 'btn btn-default' %>
+      </div>
+
+    </div>
 <% end %>
