--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,30 +1,26 @@
 <%= provide(:title, 'Sucursales') %>
-<h1>Listing branches</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Company</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<div id="index-head">
+  <h1 id="title">Sucursales</h1>
+  <%= link_to '<i class="fa fa-plus"></i> Crear Sucursal'.html_safe, new_branch_path, class: 'btn btn-success', id: 'new_branch' %>
+</div>
 
-  <tbody>
-    <% @branches.each do |branch| %>
-      <tr>
-        <td><%= branch.name %></td>
-        <td><%= validate_if_nil(branch, 'company.name') %></td>
-        <td><%= link_to 'Show', branch %></td>
-        <td><%= link_to 'Edit', edit_branch_path(branch) %></td>
-        <td><%= link_to 'Destroy', branch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
+<div class="row">
+  <% @branches.each do |branch| %>
+      <div class="col-6 col-sm-6 col-lg-4 company-container">
+        <h2><i class="fa fa-building-o"></i> <%= branch.name %></h2>
+        <h6><i class="fa fa-credit-card"></i> Dirección: <%= branch.address %></h6>
+        <h6><i class="fa fa-bookmark"></i> Compañia: <%= branch.company.name %></h6>
+
+        <!--<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>-->
+        <p>
+          <%= link_to 'Ver detalles »', branch, role: 'button', class: 'btn btn-default' %>
+          <%= link_to 'Editar »', edit_branch_path(branch), role: 'button', class: 'btn btn-info' %>
+          <%= link_to 'Eliminar »', branch, method: :delete, data: { confirm: '¿Está seguro?' }, role: 'button', class: 'btn btn-danger btn-sm' %>
+        </p>
+      </div>
+  <% end %>
+</div>
 
 <br>
-
-<%= link_to 'New Branch', new_branch_path %>
