--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -1,6 +1,6 @@
 <%= provide(:title, 'Crear sucursal') %>
-<h1>New branch</h1>
+<h1>Nueva Sucursal</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', branches_path %>
+<%= link_to 'Regresar', branches_path %>
