Scaffold de productos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
         <li class="branches-nav-bar"><%= link_to 'Sucursales', branches_path %></li>
         <li class="rules-nav-bar"><%= link_to 'Reglas', rules_path %></li>
         <li class="promotions-nav-bar"><%= link_to 'Promociones', promotions_path %></li>
+        <li class="products-nav-bar"><%= link_to 'Productos', products_path %></li>
         <li class="computers-nav-bar"><%= link_to 'Computadoras', computers_path %></li>
         <li class="rents-nav-bar"><%= link_to 'Rentas', rents_path %></li>
         <li class="users-nav-bar"><%= link_to 'Usuarios', users_path %></li>
