--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,18 +1,68 @@
 <%= provide(:title, 'Detalles de empresa') %>
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @company.name %>
-</p>
+<h1 class="company-name"><%= @company.name %></h1>
+<%= link_to 'Editar »', edit_company_path(@company), role: 'button', class: 'btn btn-info' %>
+<%= link_to 'Eliminar »', @company, method: :delete, data: { confirm: '¿Está seguro?' }, role: 'button', class: 'btn btn-danger btn-sm' %>
 
-<div class="branches">
-  <h3>Sucursales</h3>
-  <% @company.branches.each do |branch| %>
-    <div><%= branch.name %></div>
-  <% end %>
+<br/><br/>
+<div id="admin-container">
+<% if @company.admin %>
+  <%= render 'admin' %>
+<% end %>
 </div>
 
-<%= link_to 'Crear sucursal', new_branch_path(:company_id => @company.id) %><br>
+<% if @company.admin.nil? %>
+<button id="crear-administrador" class="btn btn-success btn-lg" data-toggle="modal" data-target="#new-admin">
+  <i class="fa fa-user"></i> Crear administrador
+</button>
+
+<div class="modal fade" id="new-admin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Creando administrador</h4>
+      </div>
+      <div class="modal-body">
+        <%= form_for(@user, url: '/users.js', format: :js, remote: true, html: {class: 'form-horizontal', role: 'form'}) do |f| %>
+            <!--%= f.hidden_field :role, value: 'admin_company' %-->
+            <!--%= f.hidden_field :company_id, value: @company.id %-->
+          <%= render 'users/form', f: f %>
+        <% end %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<% end %>
+
+<div class="row branches">
+  <div class="col-lg-4 items">
+    <h2>Sucursales</h2>
+    <% @company.branches.order(:id).each do |branch| %>
+        <div class="item"><i class='fa fa-building-o'></i> <%= link_to "#{branch.name}".html_safe, branch %></div>
+    <% end %>
+    <%= link_to 'Crear sucursal', new_branch_path(company_id: @company.id), class: 'btn btn-primary btn-block', role: 'button' %>
+  </div>
+  <div class="col-lg-4 items">
+    <h2>Promociones</h2>
+    <% @company.promotions.order(:id).each do |rule| %>
+        <div class="item"><i class='fa fa-list'></i> <%= link_to "#{rule.description}".html_safe, branch %></div>
+    <% end %>
+    <%= link_to 'Crear promoción', new_promotion_path(company_id: @company.id), class: 'btn btn-primary btn-block', role: 'button' %>
+  </div>
+  <div class="col-lg-4 items">
+    <h2>Reglas</h2>
+    <% @company.rules.order(:id).each do |rule| %>
+        <div class="item"><i class='fa fa-dot-circle-o'></i> <%= link_to "#{rule.description}".html_safe, branch %></div>
+    <% end %>
+    <%= link_to 'Crear regla', new_rule_path(company_id: @company.id), class: 'btn btn-primary btn-block', role: 'button' %>
+  </div>
+</div>
+
 <%= link_to 'Edit', edit_company_path(@company) %> |
 <%= link_to 'Back', companies_path %>
