--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,12 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
+        <% if current_user.is_admin? %>
         <li class="companies-nav-bar"><%= link_to 'Empresas', companies_path %></li>
+        <% end %>
+        <% if current_user.is_admin_company? %>
+            <li class="companies-nav-bar"><%= link_to 'Empresa', company_path(Company.find_by_admin_id(current_user)) %></li>
+        <% end %>
         <li class="branches-nav-bar"><%= link_to 'Sucursales', branches_path %></li>
         <li class="rules-nav-bar"><%= link_to 'Reglas', rules_path %></li>
         <li class="promotions-nav-bar"><%= link_to 'Promociones', promotions_path %></li>
@@ -39,6 +44,7 @@
         <li class="active"><a href="./">Default</a></li>
         <li><a href="#">Static top</a></li>
         -->
+        <li><%= link_to current_user.login, current_user, title: current_user.name %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cog"></i> Opciones <b class="caret"></b></a>
           <ul class="dropdown-menu">
