--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,8 @@
-<%= form_for(@user, html: {class: 'form-horizontal', role: 'form'}) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% @user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <div id="user-errors">
+    <% if @user.errors.any? %>
+        <%= render :partial => 'user_erros' %>
+    <% end %>
+  </div>
 
   <div class="form-group">
     <%= f.label :login, class: 'col-sm-2 control-label' %>
@@ -19,40 +12,40 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :name, class: 'col-sm-2 control-label' %>
+    <%= f.label :name, 'Nombre', class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :address, class: 'col-sm-2 control-label' %>
+    <%= f.label :address, 'Dirección', class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.text_field :address, class: 'form-control', placeholder: 'Dirección' %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :phone, class: 'col-sm-2 control-label' %>
+    <%= f.label :phone, 'Teléfono', class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.text_field :phone, class: 'form-control', placeholder: 'Número telefónico' %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :email, class: 'col-sm-2 control-label' %>
+    <%= f.label :email, 'Correo electrónico', class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :password, class: 'col-sm-2 control-label' %>
+    <%= f.label :password, 'Contraseña', class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.password_field :password, class: 'form-control', placeholder: 'Contraseña' %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
+    <%= f.label :password_confirmation, 'Confirmación de contraseña', class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirmación de Contraseña' %>
     </div>
@@ -63,4 +56,4 @@
       <%= f.submit 'Guardar', class: 'btn btn-default' %>
     </div>
   </div>
-<% end %>
+
