--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,8 @@
 <%= provide(:title, 'Crear usuario') %>
 <h1>Crear usuario</h1>
 
-<%= render 'form' %>
+<%= form_for(@user, html: {class: 'form-horizontal', role: 'form'}) do |f| %>
+<%= render 'form', f: f %>
+<% end %>
 
 <%= link_to 'Back', users_path %>
