--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
   <div id="user-errors">
     <% if @user.errors.any? %>
-        <%= render :partial => 'user_erros' %>
+        <%= render :partial => 'user_errors' %>
     <% end %>
   </div>
 
