--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -2,7 +2,7 @@
     $('#new-admin').modal('hide');
     $('#crear-administrador').remove();
     setTimeout(function(){
-        $('#admin-container').empty().append('<%= escape_javascript(render partial: 'companies/admin') %>').hide().show(1000);
+        $('#admin-container').empty().append('<%= escape_javascript(render 'shared/admin', admin: @user) %>').hide().show(1000);
     }, 500);
 <% else %>
     $('#user-errors').empty().append('<%= escape_javascript(render partial: 'users/user_errors') %>');
