--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -20,6 +20,13 @@
 
   <% if params[:company_id] %>
     <%= f.hidden_field :company_id, value: params[:company_id] %>
+  <% elsif current_user.is_admin? %>
+    <div class="form-group">
+      <%= f.label :company_id, 'Empresa', class: 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= f.collection_select :company_id, Company.order(:id), :id, :name, prompt: 'Seleccione empresa' %>
+      </div>
+    </div>
   <% end %>
 
   <div class="form-group">
@@ -34,10 +41,9 @@
     <= f.number_field :company_id %>
   </div>
   -->
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit 'Guardar', class: 'btn btn-default' %>
-      </div>
-
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit 'Guardar', class: 'btn btn-default' %>
     </div>
+  </div>
 <% end %>
