--- a/app/views/promotions/_form.html.erb
+++ b/app/views/promotions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@promotion) do |f| %>
+<%= form_for(@promotion, html: {class: 'form-horizontal', role: 'form'}) do |f| %>
   <% if @promotion.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@promotion.errors.count, "error") %> prohibited this promotion from being saved:</h2>
@@ -11,15 +11,28 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
+
+  <div class="form-group">
+    <%= f.label :description, 'Descripción', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_area :description %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :company_id %><br>
-    <%= f.text_field :company_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <% if params[:company_id] %>
+    <%= f.hidden_field :company_id, value: params[:company_id] %>
+  <% elsif current_user.is_admin? %>
+    <div class="form-group">
+      <%= f.label :company_id, 'Empresa', class: 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= f.collection_select :company_id, Company.order(:id), :id, :name, prompt: 'Seleccione empresa' %>
+      </div>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit 'Guardar', class: 'btn btn-default' %>
+    </div>
   </div>
 <% end %>
