--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -1,9 +1,12 @@
 <%= provide(:title, 'Detalles de sucursal') %>
 <p id="notice"><%= notice %></p>
 
-<h3>Sucural de <%= validate_if_nil(@branch, 'company.name') %></h3>
+<div id="info-branch" class="jumbotron">
+  <h2 id="branch-name"><%= @branch.name %></h2>
+  <i>Dirección: <%= @branch.address %></i>
+  <h4 id="company-name">Sucursal de <%= validate_if_nil(@branch, 'company.name') %></h4>
+</div>
 
-<h4><%= @branch.name %></h4>
 
 <div id="admin-container">
   <% if @branch.admin %>
@@ -15,25 +18,14 @@
     <%= render 'shared/new_admin' %>
 <% end %>
 
-<p>
-  <strong>Dirección:</strong>
-  <%= @branch.address %>
-</p>
-
-<!--
-<p>
-  <strong>Company:</strong>
-  <= @branch.company_id %>
-</p>
--->
-
-<div class="computers">
-  <h3>Computadoras</h3>
-  <% @branch.computers.each do |computer| %>
-    <div><%= computer.name %></div>
+<div id="computers-container" class="row">
+  <% @branch.computers.order(:id).each do |computer| %>
+  <div class="col-lg-4 items">
+    <h2><i class="fa fa-desktop"></i> <%= computer.name %></h2>
+  </div>
   <% end %>
 </div>
-
+<br>
 <%= link_to 'Crear computadora', new_computer_path(:branch_id => @branch.id) %><br>
 <%= link_to 'Edit', edit_branch_path(@branch) %> |
 <%= link_to 'Back', branches_path %>
