--- a/app/views/computers/_form.html.erb
+++ b/app/views/computers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@computer) do |f| %>
+<%= form_for(@computer, html: {class: 'form-horizontal', role: 'form'}) do |f| %>
   <% if @computer.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@computer.errors.count, "error") %> prohibited this computer from being saved:</h2>
@@ -11,19 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name, 'Nombre', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
+    </div>
   </div>
 
   <%= f.hidden_field :branch_id, value: params[:branch_id] %>
 
-  <!--<div class="field">-->
-    <!--<= f.label :branch_id %><br>-->
-    <!--<= f.text_field :branch_id %>-->
-  <!--</div>-->
-
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit 'Guardar', class: 'btn btn-default' %>
+    </div>
   </div>
+
 <% end %>
