--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,11 @@
 
 <%= form_for(@user, html: {class: 'form-horizontal', role: 'form'}) do |f| %>
 <%= render 'form', f: f %>
+<div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10">
+    <%= f.submit 'Guardar', class: 'btn btn-default' %>
+  </div>
+</div>
 <% end %>
 
 <%= link_to 'Back', users_path %>
