--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <!--%= stylesheet_link_tag    'application', "#{params[:controller]}", media: 'all', 'data-turbolinks-track' => false %-->
   <%= yield :asset_stylesheet %>
   <%= csrf_meta_tags %>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
 
@@ -99,5 +100,8 @@
     //Focus link in navbar
     $(document).ready(function(){ $('.<%= params[:controller] %>-nav-bar').addClass('active'); });
 </script>
+<!--[if lt IE 9]>
+  <script src="/assets/respond.js"></script>
+<![endif]-->
 </body>
 </html>
