--- a/app/views/shared/_principal_structure_for_crud_js.html.erb
+++ b/app/views/shared/_principal_structure_for_crud_js.html.erb
@@ -5,7 +5,7 @@
 <% owner_class_downcase = owner_class.downcase %>
 
 <h2><%= object_class.pluralize %></h2>
-<div id="container-js-<%= object_class.tableize %>">
+<div id="container-js-<%= object_class.tableize %>" class="container-js-crud">
   <% owner.send(object_class.tableize).order(:id).each do |object| %>
       <% sym = object_class_downcase.to_sym %>
       <%= render partial: "#{owner_class.tableize}/#{object_class_downcase}", locals: { sym => object, owner_class: owner_class_downcase } %>
