--- a/app/views/shared/_new_admin.html.erb
+++ b/app/views/shared/_new_admin.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-          <%= f.submit 'Guargar usuario', class: 'btn btn-primary' %>
+          <%= f.submit 'Guardar usuario', class: 'btn btn-primary' %>
         <% end %>
         <!--<button type="button" class="btn btn-primary">Save changes</button>-->
       </div>
