--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -23,21 +23,17 @@
 <% end %>
 
 <div class="row">
-  <div class="col-lg-4 items">
-    <%= render :partial => 'shared/principal_structure_for_crud_js', locals: { object_class: 'Branch', owner: @company } %></div>
-  <div class="col-lg-4 items">
-    <h2>Promociones</h2>
-    <% @company.promotions.order(:id).each do |promotion| %>
-        <div class="item"><i class='fa fa-list'></i> <%= link_to "#{promotion.description}".html_safe, promotion %></div>
-    <% end %>
-    <%= link_to 'Crear promoción', new_promotion_path, class: 'btn btn-primary btn-block', role: 'button' %>
+  <div class="col-lg-6 items">
+    <%= render :partial => 'shared/principal_structure_for_crud_js', locals: { object_class: 'Branch', owner: @company } %>
   </div>
-  <div class="col-lg-4 items">
-    <h2>Reglas</h2>
-    <% @company.rules.order(:id).each do |rule| %>
-        <div class="item"><i class='fa fa-dot-circle-o'></i> <%= link_to "#{rule.description}".html_safe, rule %></div>
-    <% end %>
-    <%= link_to 'Crear regla', new_rule_path(company_id: @company.id), class: 'btn btn-primary btn-block', role: 'button' %>
+  <div class="col-lg-6 items">
+    <%= render :partial => 'shared/principal_structure_for_crud_js', locals: { object_class: 'Promotion', owner: @company } %>
+  </div>
+  <div class="col-lg-6 items">
+    <%= render :partial => 'shared/principal_structure_for_crud_js', locals: { object_class: 'Rules', owner: @company } %>
+  </div>
+  <div class="col-lg-6 items">
+    <%= render :partial => 'shared/principal_structure_for_crud_js', locals: { object_class: 'Products', owner: @company } %>
   </div>
 </div>
 
