--- a/app/views/promotions/_form.html.erb
+++ b/app/views/promotions/_form.html.erb
@@ -15,7 +15,7 @@
   <div class="form-group">
     <%= f.label :description, 'Descripción', class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_area :description %>
+      <%= f.text_area :description, class: 'form-control', placeholder: 'Dirección' %>
     </div>
   </div>
 
