--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_for(@product, html: { multipart: true, class: 'form-horizontal', role: 'form' }) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -11,16 +11,26 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :description, 'Descripción' %><br>
-    <%= f.text_area :description %>
-  </div>
+    <div class="form-group">
+      <%= f.label :description, 'Descripción', class: 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= f.text_field :description, class: 'form-control', placeholder: 'Descripción' %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :picture, 'Foto' %><br>
-    <%= f.file_field :picture %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    jojo
+    <div class="form-group">
+
+      <div class="col-sm-10 col-sm-offset-2">
+        <%= f.file_field :picture, class: 'form-control', placeholder: 'Imágen' %>
+      </div>
+    </div>
+
+    <%= render partial: 'shared/company_id', locals: { f: f } %>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit 'Guardar', class: 'btn btn-default' %>
+      </div>
+    </div>
 <% end %>
