--- a/app/views/rules/_form_js.html.erb
+++ b/app/views/rules/_form_js.html.erb
@@ -14,7 +14,7 @@
   <div class="form-group">
     <%= f.label :description, 'Descripción', class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_area :description %>
+      <%= f.text_area :description, class: 'form-control', placeholder: 'Descripción' %>
     </div>
   </div>
 
